add container,card,cardbody and paragraph

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-
+   <div class="container">
+      <div class="card">
+        <div class="card-body">
+          <p>This is just a mock website. We are practising how to do websites with html css javascript.</p>
+        </div>
+      </div>
+   </div>
   </body>
 </html>
